--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
           <finalName>uber-mapreduce-1.0-SNAPSHOT</finalName>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
